Few more style updates to the instructors page. Fixed the collapse feature

--- a/web/themes/custom/ucpe_theme/scss/ucpe/_nav.scss
+++ b/web/themes/custom/ucpe_theme/scss/ucpe/_nav.scss
@@ -103,9 +103,13 @@
 .program_nav {
   @include make-container();
   @include screen("tablet-wide") {
+    @include make-sm-column(4);
+    @include make-sm-column-push(8);
+    margin-top: -$baseline * 20;
+  }
+  @include screen("desktop") {
     @include make-sm-column(3);
     @include make-sm-column-push(9);
-    margin-top: -$baseline * 20;
   }
 
   nav.navbar {
@@ -156,17 +160,19 @@
           a {
             @include font(
               $serif-font,
-              $baseline * 1.25,
+              $baseline * 1.125,
               $black,
               $serif-regular,
               $baseline * 1.65
             );
+            padding-top: $baseline/2;
+            padding-bottom: $baseline/2;
             text-decoration: none;
-            transform: all 0.2s ease-in;
+            transition: all 0.25s ease-in;
 
             &:hover {
               color: $maroon;
-              transform: all 0.2s ease-out;
+              transition: all 0.25s ease-out;
             }
           }
 
@@ -181,12 +187,8 @@
               display: block;
               height: 20px;
               left: 0;
-              top: 10px;
+              top: 9px;
               width: 4px;
-
-              @include screen("tablet") {
-                top: 15px;
-              }
             }
           }
         }
